--- a/Demo/index.html
+++ b/Demo/index.html
@@ -5,7 +5,7 @@
   <title>HTML5 Space Shooter Game</title>
   <link rel="stylesheet" href="demo.css" type="text/css" />
   <script src="js/phaser-arcade-physics.min.js"></script>
-  <script src="src/demo.js"></script>
+  <script src="demo.js"></script>
 </head>
 <body>
 
